--- a/index3.html
+++ b/index3.html
@@ -14,8 +14,7 @@
 <body>
 
 	<div class="center">
-		<h1 id="title">Stream FTP</h1>	
-		<!-- <a href="www.google.com" onclick="false">Hello</a> -->
+		<h1 id="title">Stream FTP</h1>
 	</div>
 
 	<div class="container">
@@ -26,15 +25,16 @@
 	    </div>
 
 	    <div class="col-sm">
-	      <iframe id="myFrame" src="http://fs.ebox.live/" width="450" height="400"></iframe>
+	      <iframe id="myFrame"></iframe>
 	    </div>
-
 	  </div>
 	</div>
 
-	
-
 	<br>
+		<div class="center">
+			<input type="text" id="inputUser" placeholder="Enter URL">
+			<button type="button" class="btn btn-warning" id="runUrl">Run</button>
+		</div>
 	<br>	
 	<div class="container center" id="video_control">
 	  <!-- <h3>Media Control</h3> -->
