--- a/index3.html
+++ b/index3.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>FTP Streamer</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link rel="stylesheet" href="lib/css/bootstrap.min.css"> -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="lib/css/style.css">
-  <script src="lib/js/jquery.min.js"></script>
-  <script src="lib/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="lib/css/style.css">
+	<script src="lib/js/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -31,10 +32,27 @@
 	</div>
 
 	<br>
-		<div class="center">
-			<input type="text" id="inputUser" placeholder="Enter URL">
+
+	<div class="container">
+	  <div class="row">
+	    
+	    <div class="col-8">
+			<input class="col-9" type="text" id="inputUser" placeholder="Enter URL">
 			<button type="button" class="btn btn-warning" id="runUrl">Run</button>
-		</div>
+	    </div>
+
+	    <div class="col-4">
+			<div class="dropdown">
+			    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+			      Choose FTP Server
+			    </button>
+			    <div class="dropdown-menu">
+			    </div>
+			  </div>
+	    </div>
+	  </div>
+	</div>
+
 	<br>	
 	<div class="container center" id="video_control">
 	  <!-- <h3>Media Control</h3> -->
@@ -47,7 +65,6 @@
 
 </body>
 
-<script src="lib/js/main.js"></script>
-
-
+<script src="lib/js/streamFTPClass.js"></script>
+<script src="lib/js/stream.js"></script>
 </html>
