--- a/index3.html
+++ b/index3.html
@@ -57,6 +57,7 @@
 	<div class="container center" id="video_control">
 	  <!-- <h3>Media Control</h3> -->
 	  <button type="button" class="btn btn-primary">Reload</button>
+	  <button type="button" class="btn btn-primary">Clear</button>
 	  <button type="button" class="btn btn-success">Play</button>
 	  <button type="button" class="btn btn-info">Info</button>
 	  <button type="button" class="btn btn-warning">Next</button>
